Updated index page with preview image

--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 	
 </head>
 <body>
-	<h1>To use:</h1>
-	<p>Open up your TwitchPlaysPokemon in-twitch chat (this has only been tested with the popout chat, so if it fails to work, pop out the chat).</p>
+	<img src="preview.png" style="float:left; margin-right: 10px;">
+	<h1>TPP Pokemon Naming Keyboard!</h1>
+	<p>Do you wish TPP would name <em>your</em> pokemon? Well, here's your chance!</p>
+	<h2>To use:</h2>
+	<p>Open up your TwitchPlaysPokemon Twitch chat (this has only been tested with the popout chat, so if it fails to work, pop out the chat).</p>
 	<p>In the url bar, paste the following code (or use it as a bookmarklet):</p>
 	<pre>javascript:(function(){document.body.appendChild(document.createElement('script')).src='http://tustin2121.github.io/TPPNamingKeyboard/pkmn_keyboard.js';})();</pre>
-	<p>Click on the window that appears in the top corner, and enjoy!</p>
+	<p>Click on the naming window that appears in the top corner! The keyboard pulls commands out of the chat stream and converts it into the appropriate inputs on the keyboard!</p>
+	<p>To mitigate the effects of the "Running" combo on naming, all "B+Direction" commands are collapsed to simply "direction" commands. All combos beyond that are collapsed to only the first command in a combo.</p>
+	<h3>Enjoy!</h3>
 </body>
 </html>
